# wiki_almanac

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/agents/: codex-review.md  commentor.md  critic.md  error-flows.md  ideator.md  pair.md  penetration-tester.md  qa-engineer.md  researcher.md  review.md  security.md
backend/: pyproject.toml
backend/app/: config.py  main.py  schemas.py  wiki_client.py
backend/app/chat/: agent.py  session_store.py  tools.py
backend/app/routers/: ai.py  categories.py  chat.py  pages.py  search.py  site.py
docs/plans/: 2026-04-09-nextjs-terracotta-migration.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  (+2 more)
scripts/: import_seed_pages.sh  setup_mediawiki.sh
seed-pages/: Aragorn.wiki  Balrog.wiki  Boromir.wiki  Category:Artifacts.wiki  Category:Characters.wiki  Category:Dwarves.wiki  Category:Dúnedain.wiki  Category:Hobbits.wiki  Category:Istari.wiki  Category:Places.wiki  Category:Wizards.wiki  Category:Works.wiki  Fellowship of the Ring.wiki  Frodo Baggins.wiki  Galadriel.wiki  Gandalf.wiki  Gimli.wiki  Gollum.wiki  Legolas.wiki  Lord of the Rings.wiki  Lothlórien.wiki  Main Page.wiki  Middle-earth.wiki  Minas Tirith.wiki  Mordor.wiki  Nazgûl.wiki  One Ring.wiki  Rivendell.wiki  Rohan.wiki  Samwise Gamgee.wiki  Saruman.wiki  Sauron.wiki  Template:Infobox artifact.wiki  Template:Infobox character.wiki  Template:Infobox place.wiki  The Shire.wiki  Théoden.wiki  Éowyn.wiki
(+29 files in other folders)
